Test feedback MF-263: Fixed user name not showing settings drop-down

--- a/src/root.styles.css
+++ b/src/root.styles.css
@@ -1,6 +1,7 @@
 .primaryNavContainer {
   position: fixed;
   top: 0;
+  z-index: 3;
 }
 
 .topNav {
@@ -29,6 +30,7 @@
   width: 100%;
   right: 0;
   z-index: 2;
+  pointer-events: none;
 }
 
 .userMenuCard {
@@ -39,6 +41,7 @@
   border-radius: 0 0 0.25rem 0.25rem;
   background: var(--omrs-color-bg-high-contrast);
   border-top: none;
+  pointer-events: all;
 }
 
 .hidden {
